    - treat background processes as part of the same uid's active GUI
      session if they have one (Closes: #779988)
    - fix some memory leaks (Closes: #775158, LP: #1417637)
  * Add backported public API polkit_system_bus_name_get_user_sync() to
    symbols file
  * Fix FTBFS with dpkg-buildpackage -A by only installing files into
    policykit-1 in per-arch builds

 -- Simon McVittie <smcv@debian.org>  Tue, 08 Sep 2015 17:35:47 +0100

policykit-1 (0.105-11) unstable; urgency=medium

  * Add 00git_invalid_object_paths.patch: backend: Handle invalid object paths
    in RegisterAuthenticationAgent (CVE-2015-3218, Closes: #787932)
  * policykit-1.postinst: Reload systemd before restarting polkitd.service, to
    avoid "Warning: polkitd.service changed on disk". (Closes: #791397)

 -- Martin Pitt <mpitt@debian.org>  Fri, 10 Jul 2015 13:03:33 +0200

policykit-1 (0.105-10) unstable; urgency=medium

  * Add 00git_type_registration.patch: Use GOnce for interface type
    registration. Fixes frequent udisks segfault (LP: #1236510).
  * Add 00git_fix_memleak.patch: Fix memory leak in EnumerateActions call
    results handler. (LP: #1417637)

 -- Martin Pitt <mpitt@debian.org>  Wed, 08 Jul 2015 12:15:41 +0200

policykit-1 (0.105-9) unstable; urgency=medium

  [ Martin Pitt ]
  * policykit-1.postinst: Don't kill polkitd under systemd, but properly
    restart it. This avoids killing it shortly after systemd tries to
    bus-activate it on installation. (LP: #1447654)

  [ Michael Biebl ]
  * Build against libsystemd instead of the old libsystemd-login compat
    library. (Closes: #779756)

 -- Michael Biebl <biebl@debian.org>  Wed, 08 Jul 2015 02:10:58 +0200

policykit-1 (0.105-8) unstable; urgency=medium

  * Rebuild against libsystemd0. This drops the last remaining dependency to
    libsystemd-login0. (Closes: #771281)
  * Bump Standards-Version to 3.9.6 (no changes necessary).

 -- Martin Pitt <mpitt@debian.org>  Fri, 28 Nov 2014 10:07:46 +0100
